Period details buttons alignment fixed

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -771,7 +771,7 @@ body {
 
 .period-details-container {
   width: 300px;
-  height: 410px;
+  height: 340px;
   overflow: hidden;
   overflow-y: scroll;
   align-items: start;
